Kubernetes/03_ingress/httpd_deploy.yaml
apiVersion: v1 
kind: Service
metadata:
  name: httpd-service
  labels:
    app: httpd
spec: 
  selector:
    app: httpd 
  ports:
  - port: 80  #Service Port
    targetPort: 80  #Pod Port
  type: ClusterIP  #Internal Access
