Kubernetes/03_ingress/nginx_deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx
spec:
  replicas: 7
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx  
          image: nginx 
          ports:
            - containerPort: 80
---
apiVersion: v1 
kind: Service 
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
